--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,14 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
+                    <div class="mb-3">
+                        <label for="options" class="form-label">Login as :</label>
+                        <select id="options" name="option" class="form-select">
+                            <option value="Option 1">Admin</option>
+                            <option value="Option 2">User</option>
+                            <option value="Option 3">Investigator</option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button><br/>
                 </form>
                 <p class="text-center mt-3">
