--- a/templates/login.html
+++ b/templates/login.html
@@ -27,17 +27,14 @@
                     </div>
                     <div class="mb-3">
                         <label for="options" class="form-label">Login as :</label>
-                        <select id="options" name="option" class="form-select">
-                            <option value="Option 1">Admin</option>
-                            <option value="Option 2">User</option>
-                            <option value="Option 3">Investigator</option>
+                        <select id="options" name="dropdown" class="form-select">
+                            <option value="Admin">Admin</option>
+                            <option value="User">User</option>
+                            <option value="Investigator">Investigator</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button><br/>
                 </form>
-                <p class="text-center mt-3">
-                    Don't have an account? <a href="/register">Register</a>
-                </p>
             </div>
         </div>
     </div>
