--- a/templates/login.html
+++ b/templates/login.html
@@ -19,11 +19,11 @@
                 <form method="POST" action="/login">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username" value = "username" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password" value = "********" required>
                     </div>
                     <div class="mb-3">
                         <label for="options" class="form-label">Login as :</label>
